Closed Bug 335676 Opened 19 years ago Closed 19 years ago

Text not rendered properly/at all when scrolling

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: dennisml, Unassigned)

References

()

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060426 Minefield/3.0a1 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060426 Minefield/3.0a1 When visiting the menitioned URL and scrolling up and down the page text is not rendered at all or faulty. Selecting the blank areas blindly "reveals" most of the text but not 100% correctly. Reproducible: Always Steps to Reproduce: 1. Visit URL submitted with the bug 2. Scroll up and down the page a few times Actual Results: Page does not get rendered properly. Expected Results: Page should get rendered properly.
Flags: blocking1.9a1?
Actually it gets worse. Apparently visiting the submitted URL has effects on sites you visit afterwards. Try this: 1. Visit http://eurogamer.net/ 2. Browse around, the site should be displayed fine. 3. Visit the URL submitted with this bug. 4. Now visit http://eurogamer.net/ again 5. Browse around and notice that you now get similar rendering errors like on groklaw.net
Confirmed. Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060427 Firefox/3.0a1
Status: UNCONFIRMED → NEW
Ever confirmed: true
confirmed Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060517 Minefield/3.0a1 ID:2006051704 [cairo]
Still happening? looks like it might be Linux only if it is.
Blocks: cairounix
Yes, still happening.
still happens on linux, X, Windows builds do not show this problem Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060527 Minefield/3.0a1 ID:2006052704 [cairo]
Blocks: 334730
No longer blocks: cairounix
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060619 Minefield/3.0a1 Visiting Groklaw and pressing page down causes CAIRO ERROR: 1 messages to shell terminal. According to Cairo's API documentation status code 1 is CAIRO_STATUS_NO_MEMORY.
The problem is in this line: 2005 <b> ConsortiumInfo&#8203;.org <br> If I remove HTML character entity 8203 the page works without problems.
Attached patch v1Splinter Review
Skip another special glyph code in glyph drawing routine.
Attachment #226376 - Flags: review?(vladimir)
Checking in gfxPangoFonts.cpp; /cvsroot/mozilla/gfx/thebes/src/gfxPangoFonts.cpp,v <-- gfxPangoFonts.cpp new revision: 1.25; previous revision: 1.24 done Checked in on trunk.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Flags: blocking1.9a1?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: