Bug 335676 - Text not rendered properly/at all when scrolling, patch by Pawel Chmielowski, r=vladimir